# yediemin

./: README.md  pyproject.toml
tests/: test_yediemin.py
yediemin/: __init__.py  serializers.py  settings.py  storages.py  views.py
